# quark-pan-uploader

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  quark_uploader.spec  windows_version_info.txt
docs/plans/: 2026-03-07-quark-pan-uploader-share-design.md  2026-03-07-quark-pan-uploader-share.md  2026-03-08-quark-uploader-ui-polish-design.md  2026-03-08-quark-uploader-ui-polish-plan.md  2026-03-08-single-target-upload-design.md  2026-03-08-single-target-upload-plan.md  2026-03-09-controls-tabs-layout-design.md  2026-03-09-controls-tabs-layout-plan.md  2026-03-09-repository-cleanup-design.md  2026-03-09-repository-cleanup-plan.md  2026-03-09-tab-interaction-followup-design.md  2026-03-09-tab-interaction-followup-plan.md  2026-03-09-upload-mode-button-sync-design.md  2026-03-09-upload-mode-button-sync-plan.md
docs/specs/: 2026-03-09-upload-concurrency-ui-performance-analyze.md  2026-03-09-upload-concurrency-ui-performance-clarify.md  2026-03-09-upload-concurrency-ui-performance-spec.md  2026-03-09-upload-concurrency-ui-performance-tasks.md
scripts/: benchmark_upload_modes.py  build_windows.ps1
src/quark_uploader/: __init__.py  app.py  main.py  models.py  paths.py  settings.py
tests/: test_main_script_entry.py  test_main_wiring.py  test_models.py  test_paths.py  test_smoke_import.py
tests/gui/: test_controller.py  test_controller_local_scan.py  test_controller_regressions.py  test_controller_settings.py  test_interactions.py  test_local_scan_ui.py  test_main_window.py  test_main_window_styles.py  test_refresh_ui.py  (+8 more)
(+65 files in other folders)
