[project]
name = "quark-uploader"
version = "0.2.0"
description = "Windows desktop uploader for Quark Drive with batch and single-target upload modes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pyside6>=6.10.2",
    "requests>=2.32.5",
]

[project.scripts]
quark-uploader = "quark_uploader:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
